--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-
+server.port = 8085
 spring.datasource.url=jdbc:mysql://localhost:3306/quicktrip?useSSL=false&serverTimezone=UTC
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver        
-#com.mysql.jdbc.Driver
-#spring.profiles.active=dev
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-server.port = 8083
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.profiles.active=dev
+
